src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Support Process</fullName>
        <description>Master Case Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Verified</fullName>
        </values>
        <values>
            <fullName>Waiting on customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>City from the Account associated with this case.  Account should be a high school.</inlineHelpText>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>State from the Account associated with this case.  Account should be a high school.</inlineHelpText>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Teacher_Advisor__c</fullName>
        <formula>IF( High_School__r.Active_T_A__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field references the High School object, if one is entered in the &quot;High School Link&quot; field.  Update the checkbox on the High School when a T/A has been found, (and make sure the T/A is entered in Salesforce.</inlineHelpText>
        <label>Active Teacher/Advisor?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Materials__c</fullName>
        <inlineHelpText>Please select the chapter materials you need.  If you need more than the quantities indicated, please specify below.</inlineHelpText>
        <label>Chapter Materials</label>
        <picklist>
            <picklistValues>
                <fullName>JSA Introductory Brochures (25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;We Want You for JSA&quot; Posters (25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Handbooks (10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upcoming Convention Flyers (25)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Constitution__c</fullName>
        <formula>IF( High_School__r.Constitution__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field references the High School object, if one is entered in the &quot;High School Link&quot; field.  Update the checkbox on the High School when a constitution document has been received.</inlineHelpText>
        <label>Constitution?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Requested date by which the case should be closed.</description>
        <inlineHelpText>Requested date by which the case should be closed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_meeting__c</fullName>
        <formula>IF( High_School__r.First_meeting__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field references the High School object, if one is entered in the &quot;High School Link&quot; field.  Update the checkbox on the High School when the chapter has held its first meeting.</inlineHelpText>
        <label>First meeting?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_Graudation_Year__c</fullName>
        <label>High School Graudation Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to High School object for related school.</inlineHelpText>
        <label>High School Link</label>
        <referenceTo>High_School__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>I_am_a_cp_ta__c</fullName>
        <inlineHelpText>Used for web-to-case form requesting update of jsa_role for portal account.</inlineHelpText>
        <label>CP/TA?</label>
        <picklist>
            <picklistValues>
                <fullName>Chapter President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher-Advisor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Scholarship_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Scholarship Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Approval__c</fullName>
        <formula>IF(High_School__r.School_Approval__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field references the High School object, if one is entered in the &quot;High School Link&quot; field.  Update the checkbox on the High School when school approval has been received.</inlineHelpText>
        <label>School Approval?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Range__c</fullName>
        <label>Scope range (hours)</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>Severity of the problem, based on impact on work or revenue stream.</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>S1 - Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5 - Very Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summer_Program_Inquiry__c</fullName>
        <description>List of summer programs.</description>
        <inlineHelpText>Please select one or more of these JSA Summer Programs</inlineHelpText>
        <label>Summer Program Inquiry</label>
        <picklist>
            <picklistValues>
                <fullName>JSA Summer School at Georgetown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Summer School at Stanford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Summer School at Princeton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Symposium at the RNC and DNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/I don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Taxes_Submitted__c</fullName>
        <formula>IF( High_School__r.Taxes__c &gt;0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field references the High School Account, if one is entered in the &quot;High School Link&quot; field.  When taxes are received, enter them on the High School account.</inlineHelpText>
        <label>Taxes Submitted?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <description>User imputted address from web to case form</description>
        <inlineHelpText>If you are requesting Chapter Materials, please enter a valid mailing address.</inlineHelpText>
        <label>Web Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_City__c</fullName>
        <description>City</description>
        <label>Web City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_High_School__c</fullName>
        <description>Web-to-case entered high school</description>
        <inlineHelpText>Please enter the name of your high school</inlineHelpText>
        <label>Web High School</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_State__c</fullName>
        <description>State</description>
        <label>Web State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Zipcode__c</fullName>
        <description>zipcode</description>
        <label>Web Zipcode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_type__c</fullName>
        <label>Type of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Student</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher/Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_Chapter_Start_Up_Cases</fullName>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Chapter_Start_Up</value>
        </filters>
        <label>Open Chapter Start-Up Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_IT_Cases</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Severity__c</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.IT_Case</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Open IT Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Chapter_Materials</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>Use the record type for chapter materials requests</description>
        <label>Chapter Materials</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chapter_Start_Up</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>Use this record type for inquiries about starting or re-starting a chapter</description>
        <label>Chapter Start-Up</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Case</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>Use this record type for technology cases</description>
        <label>IT Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Case</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>All other cases</description>
        <label>Standard Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_Recruitment</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <description>Cases related to Summer Recruitment</description>
        <label>Summer Recruitment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>